--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,4 +1,21 @@
 <header class="header">
-	<div class="header__container">
+	<div class="header__top top-header">
+		<div class="top-header__container">
+			<div class="header__menu menu">
+				<button type="button" class="menu__icon icon-menu"><span></span></button>
+				<nav class="menu__body">
+					<ul class="menu__list">
+						<li class="menu__item"><a href="" class="menu__link">О нас</a></li>
+						<li class="menu__item"><a href="" class="menu__link">Оплата и доставка</a></li>
+						<li class="menu__item"><a href="" class="menu__link"></a>Новости</li>
+						<li class="menu__item"><a href="" class="menu__link"></a>Контакты</li>
+					</ul>
+				</nav>
+			</div>
+			<a href="" class="top-header__user _icon-user">Личный кабинет</a>
+			<button type="button" class="icon-menu"></button>
+		</div>
 	</div>
+	<div class="header__body body-header"><span></span></div>
+	<div class="header__catalog catalog header"></div>
 </header>
