--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -26,7 +26,7 @@
 				</form>
 			</div>
 			<div class="body-header__actions actions-header">
-				<a href="#" class="actions-header__location _icon-location">Москва</a>
+				<a href="#" class="actions-header__location _icon-location"><span>Москва</span></a>
 				<div class="actions-header__phone phones-header">
 					<div class="phone-header__items">
 						<div data-spollers class="phone-header">
@@ -92,6 +92,102 @@
 									</li>
 									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Ножи
 											кухонные</a>
+									</li>
+								</ul>
+								<a href="#" class="sub-menu-catalog__all">Смотреть все</a>
+							</div>
+							<div class="sub-menu-catalog__column">
+								<a href="" class="sub-menu-catalog__category">Производство ножей</a>
+								<ul class="sub-menu-catalog__list">
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Ножи АИР</a>
+									</li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Ножи ЗИК</a>
+									</li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Ножи ЗЗОСС</a>
+									</li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Ножи
+											РОСоружие</a>
+									</li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Ножи
+											Оружейник</a>
+									</li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Булат Сергея
+											Баранова</a></li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Булат Андрея
+											Умерова</a></li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Ножи Златко</a>
+									</li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Ножи Стиль-М</a>
+									</li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Оружейная
+											компания</a>
+									</li>
+								</ul>
+								<a href="#" class="sub-menu-catalog__all">Смотреть все</a>
+							</div>
+							<div class="sub-menu-catalog__column">
+								<a href="" class="sub-menu-catalog__category">Ножи по маркам стали</a>
+								<ul class="sub-menu-catalog__list">
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Ножи из стали
+											40х102С2М</a></li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Ножи из стали
+											95х18</a></li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Ножи из стали
+											100х13м</a>
+									</li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Ножи из стали
+											110х18м-ШД</a>
+									</li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Ножи из стали
+											ЭИ-107 ТЦ</a>
+									</li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Ножи из стали
+											50х14МФ</a></li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Ножи из стали
+											AUS-8</a></li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Ножи из стали
+											К340</a>
+									</li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Ножи из стали
+											M390</a>
+									</li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Ножи из стали
+											ЭП-766</a>
+									</li>
+								</ul>
+								<a href="#" class="sub-menu-catalog__all">Смотреть все</a>
+							</div>
+							<div class="sub-menu-catalog__column">
+								<a href="" class="sub-menu-catalog__category">Заточка и полировка ножей</a>
+								<ul class="sub-menu-catalog__list">
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Паста ГОИ</a>
+									</li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Алмазная
+											паста</a></li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Бруски и камни
+											для заточки</a>
+									</li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Заточные
+											системы</a>
+									</li>
+								</ul>
+								<a href="#" class="sub-menu-catalog__all">Смотреть все</a>
+							</div>
+							<div class="sub-menu-catalog__column">
+								<a href="" class="sub-menu-catalog__category">Ножевая мастерская</a>
+								<ul class="sub-menu-catalog__list">
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Ножевые
+											клинки</a></li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Заготовки для
+											ножей</a></li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Литье для
+											ножей</a>
+									</li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Материалы для
+											рукоятей</a>
+									</li>
+									<li class="sub-menu-catalog--item"><a href="" class="sub-menu-catalog__link">Уход за
+											рукоятиями ножей</a>
 									</li>
 								</ul>
 								<a href="#" class="sub-menu-catalog__all">Смотреть все</a>
