работа над подменю

--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -58,15 +58,24 @@
 		<div class="catalog-header__container">
 			<nav class="catalog-header__menu menu-catalog">
 				<ul class="menu-catalog__list">
-					<li class="menu-catalog__item"><a href="" class="menu-catalog__link">Каталог ножей</a></li>
-					<li class="menu-catalog__item"><a href="" class="menu-catalog__link">Клинковое оружие</a></li>
-					<li class="menu-catalog__item"><a href="" class="menu-catalog__link">Сувенирные изделия</a></li>
-					<li class="menu-catalog__item"><a href="" class="menu-catalog__link">Фонари ARMYTEK</a></li>
-					<li class="menu-catalog__item"><a href="" class="menu-catalog__link">Сопутствующие товары</a></li>
+					<li class="menu-catalog__item"><button data-parent="1" class="menu-catalog__link">Каталог ножей</button>
+					</li>
+					<li class="menu-catalog__item"><button data-parent="2" class="menu-catalog__link">Клинковое
+							оружие</button>
+					</li>
+					<li class="menu-catalog__item"><a href="#" class="menu-catalog__link">Сувенирные
+							изделия</a>
+					</li>
+					<li class="menu-catalog__item"><a href="#" class="menu-catalog__link">Фонари ARMYTEK</a>
+					</li>
+					<li class="menu-catalog__item"><a href="#" class="menu-catalog__link">Сопутствующие
+							товары</a>
+					</li>
 				</ul>
 				<div class="menu-catalog__sub-menu sub-menu-catalog">
+					<button type="button" class="sub-menu-catalog__back _icon-back">Назад</button>
 					<div class="sub-menu-catalog__container">
-						<div class="sub-menu-catalog__block">
+						<div hidden data-submenu="1" class="sub-menu-catalog__block">
 							<div class="sub-menu-catalog__column">
 								<a href="" class="sub-menu-catalog__category">Категория ножей</a>
 								<ul class="sub-menu-catalog__list">
