--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,15 +1,15 @@
 <header class="header">
 	<div class="header__top top-header">
 		<div class="top-header__container">
-			<div class="top-header__menu menu">
-				<nav class="menu__body">
-					<ul class="menu__list">
-						<li class="menu__item"><a href="" class="menu__link">О нас</a></li>
-						<li class="menu__item"><a href="" class="menu__link">Оплата и доставка</a></li>
-						<li class="menu__item"><a href="" class="menu__link"></a>Новости</li>
-						<li class="menu__item"><a href="" class="menu__link"></a>Контакты</li>
-					</ul>
-				</nav>
+			<div class="top-header__menu menu-top-header">
+
+				<ul class="menu-top-header__list">
+					<li class="menu-top-header__item"><a href="" class="menu-top-header__link">О нас</a></li>
+					<li class="menu-top-header__item"><a href="" class="menu-top-header__link">Оплата и доставка</a></li>
+					<li class="menu-top-header__item"><a href="" class="menu-top-header__link"></a>Новости</li>
+					<li class="menu-top-header__item"><a href="" class="menu-top-header__link"></a>Контакты</li>
+				</ul>
+
 			</div>
 			<a href="" class="top-header__user _icon-user">Личный кабинет</a>
 			<button type="button" class="icon-menu"><span></span></button>
