--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -3,7 +3,8 @@
 		<div class="top-header__container">
 			<div class="top-header__menu menu-top-header">
 
-				<ul class="menu-top-header__list">
+				<ul data-da=".menu__body,991.98" class="menu-top-header__list">
+					<li class="menu-top-header__item menu-top-header__item--catalog"><a href="" data-catalog class="menu-top-header__link _icon-arrow-bottom">Каталог товаров</a></li>
 					<li class="menu-top-header__item"><a href="" class="menu-top-header__link">О нас</a></li>
 					<li class="menu-top-header__item"><a href="" class="menu-top-header__link">Оплата и доставка</a></li>
 					<li class="menu-top-header__item"><a href="" class="menu-top-header__link"></a>Новости</li>
@@ -12,7 +13,11 @@
 
 			</div>
 			<a href="" class="top-header__user _icon-user">Личный кабинет</a>
-			<button type="button" class="icon-menu"><span></span></button>
+			<nav hidden class="menu">
+				<button type="button" class="menu__icon icon-menu"><span></span></button>
+				<div class="menu__body">
+				</div>
+			</nav>
 		</div>
 	</div>
 	<div class="header__body body-header">
@@ -43,17 +48,17 @@
 					<button type="button" data-popup="#callback" class="phone-header__callback">Заказать звонок</button>
 				</div>
 				<a href="" class="actions-header__favorite _icon-favorit"></a>
-				<div class="actions-header__card card-header">
+				<a href="#" class="actions-header__card card-header">
 					<div class="card-header__icon _icon-basket"><span>0</span></div>
 					<div class="card-header__body">
 						<div class="card-header__sum">0 р.</div>
-						<a href="#" class="card-header__link">Оформить заказ</a>
+						<div class="card-header__link">Оформить заказ</div>
 					</div>
-				</div>
+				</a>
 			</div>
 		</div>
 	</div>
-	<div class="header__catalog catalog-header">
+	<div data-da=".menu__body, 991.98" class="header__catalog catalog-header">
 		<div class="catalog-header__container">
 			<nav class="catalog-header__menu menu-catalog">
 				<button type="button" class="menu-catalog__back _icon-back">Назад</button>
