--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -3,16 +3,16 @@
 		<div class="top-header__container">
 			<div class="top-header__menu menu-top-header">
 
-				<ul data-da=".menu__body,991.98" class="menu-top-header__list">
-					<li class="menu-top-header__item menu-top-header__item--catalog"><a href="" data-catalog class="menu-top-header__link _icon-arrow-bottom">Каталог товаров</a></li>
+				<ul data-da=".menu__body, 991.98" class="menu-top-header__list">
+					<li class="menu-top-header__item menu-top-header__item--catalog"><a href="" data-catalog class="menu-top-header__link menu-top-header__link--catalog _icon-arrow-bottom">Каталог товаров</a></li>
 					<li class="menu-top-header__item"><a href="" class="menu-top-header__link">О нас</a></li>
 					<li class="menu-top-header__item"><a href="" class="menu-top-header__link">Оплата и доставка</a></li>
-					<li class="menu-top-header__item"><a href="" class="menu-top-header__link"></a>Новости</li>
-					<li class="menu-top-header__item"><a href="" class="menu-top-header__link"></a>Контакты</li>
+					<li class="menu-top-header__item"><a href="" class="menu-top-header__link">Новости</a></li>
+					<li class="menu-top-header__item"><a href="" class="menu-top-header__link">Контакты</a></li>
 				</ul>
 
 			</div>
-			<a href="" class="top-header__user _icon-user">Личный кабинет</a>
+			<a href="" class="top-header__user _icon-user"><span>Личный кабинет</span></a>
 			<nav hidden class="menu">
 				<button type="button" class="menu__icon icon-menu"><span></span></button>
 				<div class="menu__body">
@@ -23,7 +23,7 @@
 	<div class="header__body body-header">
 		<div class="body-header__container">
 			<a href="" class="body-header__logo"></a>
-			<div class="body-header__search">
+			<div data-da=".catalog-header__container, 479.98" class="body-header__search">
 				<form action="#" class="search-header">
 					<button type="submit" class="search-header__button _icon-search"></button>
 					<input autocomplete="off" type="text" name="form[]" data-error="Ошибка" placeholder="Поиск" class="search-header__input">
@@ -31,11 +31,11 @@
 			</div>
 			<div class="body-header__actions actions-header">
 				<a href="#" class="actions-header__location _icon-location"><span>Москва</span></a>
-				<div class="actions-header__phone phones-header">
+				<div data-da=".top-header__container, 991.98, first" class="actions-header__phone phones-header">
 					<div class="phone-header__items">
 						<div data-spollers class="phone-header">
 							<div class="phone-header__item">
-								<a href="tel:88007774967" class="phone-header__phone">8-800-777-49-67</a>
+								<a href="tel:88007774967" class="phone-header__phone"><span>8-800-777-49-67</span></a>
 								<button type="button" data-spoller class="phone-header__arrow _icon-arrow-bottom"></button>
 								<ul class=" phone-header__list">
 									<li><a href="tel:88007774963" class="phone-header__phone">8-800-777-49-63</a></li>
@@ -47,8 +47,8 @@
 					</div>
 					<button type="button" data-popup="#callback" class="phone-header__callback">Заказать звонок</button>
 				</div>
-				<a href="" class="actions-header__favorite _icon-favorit"></a>
-				<a href="#" class="actions-header__card card-header">
+				<a href="#" data-da=".top-header__container, 991.98, 2" class="actions-header__favorite _icon-favorit"></a>
+				<a href="#" data-da=".top-header__container, 991.98, 2" class="actions-header__card card-header">
 					<div class="card-header__icon _icon-basket"><span>0</span></div>
 					<div class="card-header__body">
 						<div class="card-header__sum">0 р.</div>
