--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -4,7 +4,7 @@
 			<div class="top-header__menu menu-top-header">
 
 				<ul data-da=".menu__body, 991.98" class="menu-top-header__list">
-					<li class="menu-top-header__item menu-top-header__item--catalog"><a href="" data-catalog class="menu-top-header__link menu-top-header__link--catalog _icon-arrow-bottom">Каталог товаров</a></li>
+					<li class="menu-top-header__item menu-top-header__item--catalog"><a href="" class="menu-top-header__link menu-top-header__link--catalog _icon-arrow-bottom">Каталог товаров</a></li>
 					<li class="menu-top-header__item"><a href="" class="menu-top-header__link">О нас</a></li>
 					<li class="menu-top-header__item"><a href="" class="menu-top-header__link">Оплата и доставка</a></li>
 					<li class="menu-top-header__item"><a href="" class="menu-top-header__link">Новости</a></li>
@@ -30,7 +30,7 @@
 				</form>
 			</div>
 			<div class="body-header__actions actions-header">
-				<a href="#" class="actions-header__location _icon-location"><span>Москва</span></a>
+				<a href="" class="actions-header__location _icon-location"><span>Москва</span></a>
 				<div data-da=".top-header__container, 991.98, first" class="actions-header__phone phones-header">
 					<div class="phone-header__items">
 						<div data-spollers class="phone-header">
@@ -47,8 +47,8 @@
 					</div>
 					<button type="button" data-popup="#callback" class="phone-header__callback">Заказать звонок</button>
 				</div>
-				<a href="#" data-da=".top-header__container, 991.98, 2" class="actions-header__favorite _icon-favorit"></a>
-				<a href="#" data-da=".top-header__container, 991.98, 2" class="actions-header__card card-header">
+				<a href="" data-da=".top-header__container, 991.98, 2" class="actions-header__favorite _icon-favorit"></a>
+				<a href="" data-da=".top-header__container, 991.98, 2" class="actions-header__card card-header">
 					<div class="card-header__icon _icon-basket"><span>0</span></div>
 					<div class="card-header__body">
 						<div class="card-header__sum">0 р.</div>
@@ -58,7 +58,7 @@
 			</div>
 		</div>
 	</div>
-	<div data-da=".menu__body, 991.98" class="header__catalog catalog-header">
+	<div class="header__catalog catalog-header">
 		<div class="catalog-header__container">
 			<nav class="catalog-header__menu menu-catalog">
 				<button type="button" class="menu-catalog__back _icon-back">Назад</button>
