--- a/src/home.html
+++ b/src/home.html
@@ -1,13 +1,90 @@
 <!DOCTYPE html>
 <html lang="ru">
-@@include('html/_head.htm',{
-"title":"Главная"
-})
+@@include('html/_head.htm',{"title":"Главная"})
 
 <body>
 	<div class="wrapper">
 		@@include('html/_header.htm',{})
-		<main class="page">
+		<main class="page page--home">
+			<section class="page__main-block main-block">
+				<div class="main-block__container">
+					<div class="main-block__body">
+						<div class="main-block__slider swiper">
+							<div class="main-block__wrapper swiper-wrapper">
+								<div class="main-block__slide slide-main-block">
+									<div class="slide-main-block__content">
+										<h2 data-swiper-parallax="-100" class="slide-main-block__title">Интернет магазин сертифицированных</h2>
+										<div data-swiper-parallax="-150" class="slide-main-block__sub-title">златоустовских ножей</div>
+										<div data-swiper-parallax="-200" class="slide-main-block__text">
+											Добро пожаловать на официальный сайт «ЗЛАТМАКС»! В нашем магазине представлен наиболее широкий выбор Златоустовских ножей от Златоустовских Оружейных Фабрик и компаний, мы являемся официальными поставщиками.
+										</div>
+									</div>
+									<a href="" data-swiper-parallax="-300" class="slide-main-block__button button">Подробнее</a>
+									<div class="slide-main-block__media"></div>
+								</div>
+								<div class="main-block__slide slide-main-block">
+									<div class="slide-main-block__content">
+										<h2 data-swiper-parallax="-100" class="slide-main-block__title">Интернет магазин сертифицированных</h2>
+										<div data-swiper-parallax="-150" class="slide-main-block__sub-title">златоустовских ножей</div>
+										<div data-swiper-parallax="-200" class="slide-main-block__text">
+											Добро пожаловать на официальный сайт «ЗЛАТМАКС»! В нашем магазине представлен наиболее широкий выбор Златоустовских ножей от Златоустовских Оружейных Фабрик и компаний, мы являемся официальными поставщиками.
+										</div>
+									</div>
+									<a href="" data-swiper-parallax="-300" class="slide-main-block__button button">Подробнее</a>
+								</div>
+								<div class="main-block__controll controll-main-block">
+									<div class="controll-main-block__dotts"></div>
+									<div class="controll-main-block__fraction fraction-controll">
+										<span class="fraction-controll__current">01</span> / <span class="fraction-controll__all">0</span>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="main-block__media media-main-block">
+							<div class="media-main-block__body">
+								<div class="media-main-block__image">
+									<img src="@img/main-page/main-block/image.png" alt="Кухонные ножи в подставке">
+								</div>
+								<div class="media-main-block__tips">
+									<button type="button" data-tippy-content="Подсказка" class="media-main-block__tip media-main-block__tip_1"><span>+</span></button>
+									<button type="button" data-tippy-content="Подсказка" class="media-main-block__tip media-main-block__tip_2"><span>+</span></button>
+									<button type="button" data-tippy-content="Подсказка" class="media-main-block__tip media-main-block__tip_3"><span>+</span></button>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="main-block__advantages advantages-main">
+						<div class="advantages-main__item">
+							<div class="advantages-main__icon">
+								<img src="@img/main-page/main-block/icons/01.svg" alt="Печать">
+							</div>
+							<div class="advantages-main__text">Гарантия 100% возврата
+								денежных средств</div>
+						</div>
+						<div class="advantages-main__item">
+							<div class="advantages-main__icon">
+								<img src="@img/main-page/main-block/icons/02.svg" alt="Грузовичок">
+							</div>
+							<div class="advantages-main__text">Доставка по России,
+								Казахстану и Белоруссии</div>
+						</div>
+						<div class="advantages-main__item">
+							<div class="advantages-main__icon">
+								<img src="@img/main-page/main-block/icons/03.svg" alt="Список">
+							</div>
+							<div class="advantages-main__text">Возможность оформление
+								заказа без регистрации.</div>
+						</div>
+						<div class="advantages-main__item">
+							<div class="advantages-main__icon">
+								<img src="@img/main-page/main-block/icons/04.svg" alt="Проценты">
+							</div>
+							<div class="advantages-main__text">Скидки постоянным
+								покупателям. </div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		@@include('html/_footer.htm',{})
 	</div>
