--- a/src/home.html
+++ b/src/home.html
@@ -9,8 +9,8 @@
 			<section class="page__main-block main-block">
 				<div class="main-block__container">
 					<div class="main-block__body">
-						<div class="main-block__slider swiper">
-							<div class="main-block__wrapper swiper-wrapper">
+						<div class="main-block__slider">
+							<div class="main-block__swiper">
 								<div class="main-block__slide slide-main-block">
 									<div class="slide-main-block__content">
 										<h2 data-swiper-parallax="-100" class="slide-main-block__title">Интернет магазин сертифицированных</h2>
@@ -20,7 +20,16 @@
 										</div>
 									</div>
 									<a href="" data-swiper-parallax="-300" class="slide-main-block__button button">Подробнее</a>
-									<div class="slide-main-block__media"></div>
+								</div>
+								<div class="main-block__slide slide-main-block">
+									<div class="slide-main-block__content">
+										<h2 data-swiper-parallax="-100" class="slide-main-block__title">Интернет магазин сертифицированных</h2>
+										<div data-swiper-parallax="-150" class="slide-main-block__sub-title">златоустовских ножей</div>
+										<div data-swiper-parallax="-200" class="slide-main-block__text">
+											Добро пожаловать на официальный сайт «ЗЛАТМАКС»! В нашем магазине представлен наиболее широкий выбор Златоустовских ножей от Златоустовских Оружейных Фабрик и компаний, мы являемся официальными поставщиками.
+										</div>
+									</div>
+									<a href="" data-swiper-parallax="-300" class="slide-main-block__button button">Подробнее</a>
 								</div>
 								<div class="main-block__slide slide-main-block">
 									<div class="slide-main-block__content">
@@ -32,18 +41,18 @@
 									</div>
 									<a href="" data-swiper-parallax="-300" class="slide-main-block__button button">Подробнее</a>
 								</div>
-								<div class="main-block__controll controll-main-block">
-									<div class="controll-main-block__dotts"></div>
-									<div class="controll-main-block__fraction fraction-controll">
-										<span class="fraction-controll__current">01</span> / <span class="fraction-controll__all">0</span>
-									</div>
+							</div>
+							<div class="main-block__controll controll-main-block">
+								<div class="controll-main-block__dotts"></div>
+								<div class="controll-main-block__fraction fraction-controll">
+									<span class="fraction-controll__current">01</span> / <span class="fraction-controll__all">0</span>
 								</div>
 							</div>
 						</div>
 						<div class="main-block__media media-main-block">
 							<div class="media-main-block__body">
 								<div class="media-main-block__image">
-									<img src="@img/main-page/main-block/image.png" alt="Кухонные ножи в подставке">
+									<img src="@img/main-page/main-block/image.png" alt="Картинка">
 								</div>
 								<div class="media-main-block__tips">
 									<button type="button" data-tippy-content="Подсказка" class="media-main-block__tip media-main-block__tip_1"><span>+</span></button>
