--- a/src/home.html
+++ b/src/home.html
@@ -191,7 +191,7 @@
 			<section class="page__products-slider products-slider">
 				<div class="products-slider__container">
 					<div class="products-slider__header">
-						<h2 class="products-slider__title"></h2>
+						<h2 class="products-slider__title">Хиты продаж</h2>
 						<a href="#" class="products-slider__more">Все акции</a>
 					</div>
 					<div class="products-slider__slider swiper">
