--- a/src/home.html
+++ b/src/home.html
@@ -188,20 +188,16 @@
 					</div>
 				</div>
 			</section>
-			<section class="page__products-slider products-slider">
-				<div class="products-slider__container">
-					<div class="products-slider__header">
-						<h2 class="products-slider__title">Хиты продаж</h2>
-						<a href="#" class="products-slider__more">Все акции</a>
-					</div>
-					<div class="products-slider__slider swiper">
-						<div class="products-slider__wrapper swiper-wrapper">
-							<div class="products-slider__slide swiper-slide">
-								<div class="product-card"></div>
-							</div>
-						</div>
-					</div>
-				</div>
+			<section class="page__hits-products hits-products">
+				@@include('html/_products-slider.htm',{
+				"title":"Хиты продаж",
+				"moretext":"Перейти в каталог"
+				})
+			</section>
+			<section class="page__new-products new-products">
+				@@include('html/_products-new.htm',{
+				"title":"Новинки"
+				})
 			</section>
 		</main>
 		@@include('html/_footer.htm',{})
