--- a/src/home.html
+++ b/src/home.html
@@ -206,23 +206,27 @@
 				})
 			</section>
 			<section class="page__sale-products sale-products">
+				<h2 class="visually-hidden">Акции</h2>
 				@@include('html/_products-slider.htm',{
 				"title":"Акции",
 				"moretext":"Все акции"
 				})
 			</section>
 			<section class="page__new-products new-products new-products_no-top">
+				<h2 class="visually-hidden">Новинки</h2>
 				@@include('html/_products-new.htm',{
 				"title":"Новинки"
 				})
 			</section>
 			<section class="page__sale-products sale-products sale-products_no-bottom">
+				<h2 class="visually-hidden">Акции</h2>
 				@@include('html/_products-slider.htm',{
 				"title":"Акции",
 				"moretext":"Все акции"
 				})
 			</section>
 			<section class="page__sale-products sale-products">
+				<h2 class="visually-hidden">Акции</h2>
 				@@include('html/_products-slider.htm',{
 				"title":"Акции",
 				"moretext":"Все акции"
@@ -276,6 +280,35 @@
 								<div class="item-article__date">24.07.2019</div>
 							</div>
 						</article>
+					</div>
+				</div>
+			</section>
+			<section class="page__products-block products-block">
+				<h2 class="visually-hidden">Продукция</h2>
+				<div class="products-block__container">
+					<div class="products-block__item product-block">
+						<div class="product-block__body">
+							<h4 class="product-block__title">
+								<a href="" class="product-block__link-title">Тактические фонари</a>
+							</h4>
+							<div class="product-block__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+							<a href="" class="product-block__button button">Подробнее</a>
+						</div>
+						<div class="product-block__image">
+							<img src="@img/products-block/01.jpg" alt="Картинка">
+						</div>
+					</div>
+					<div class="products-block__item product-block">
+						<div class="product-block__body">
+							<h4 class="product-block__title">
+								<a href="" class="product-block__link-title">Налобные мультифонари</a>
+							</h4>
+							<div class="product-block__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+							<a href="" class="product-block__button button">Подробнее</a>
+						</div>
+						<div class="product-block__image">
+							<img src="@img/products-block/02.jpg" alt="Картинка">
+						</div>
 					</div>
 				</div>
 			</section>
