--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -140,29 +140,29 @@
 											</div>
 										</li>
 										<li class="menu-footer__item">
-											<a href="mailto:info@zlatmax.ru" class="menu-footer__link _icon-footer-email">info@zlatmax.ru</a>
+											<a href="mailto:info@zlatmax.ru" class="menu-footer__link _icon-footer-mail">info@zlatmax.ru</a>
 										</li>
 									</ul>
 								</nav>
 								<ul class="social-footer">
 									<li class="social-footer__item">
 										<a href="" class="social-footer__link">
-											<img src="@img/icons/social/facebook.png" alt="">
+											<img src="@img/icons/social/social-fb.png" alt="Facebook">
 										</a>
 									</li>
 									<li class="social-footer__item">
 										<a href="" class="social-footer__link">
-											<img src="@img/icons/social/viber.png" alt="">
+											<img src="@img/icons/social/social-wibber.png" alt="Viber">
 										</a>
 									</li>
 									<li class="social-footer__item">
 										<a href="" class="social-footer__link">
-											<img src="@img/icons/social/telegram.png" alt="">
+											<img src="@img/icons/social/social-telegram.png" alt="Telegram">
 										</a>
 									</li>
 									<li class="social-footer__item">
 										<a href="" class="social-footer__link">
-											<img src="@img/icons/social/whatsapp.png" alt="">
+											<img src="@img/icons/social/social-whatsapp.png" alt="WhatsApp">
 										</a>
 									</li>
 								</ul>
@@ -219,7 +219,7 @@
 			<div class="body-footer__bottom">
 				<div class="body-footer__rules">
 					Все материалы, размещенные на сайте, носят справочный характер и не являются
-					публичной офертой, определяемойположениями Статьи 437 Гражданского кодекса Российской Федерации.
+					публичной офертой, определяемой положениями Статьи 437 Гражданского кодекса Российской Федерации.
 					При копировании материалов гиперссылка на www.zlatmax.ru обязательна!
 				</div>
 				<div class="body-footer__copy">
