fix catalog styles

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -401,7 +401,7 @@
 								</article>
 							</div>
 							<div class="catalog__footer">
-								<a href="#" class="catalog__more button button_border">Показать боьше</a>
+								<a href="#" class="catalog__more button button_border">Показать больше</a>
 								<div class="catalog__pagination pagination">
 									<button type="button" class="pagination__arrow pagination__arrow_left _icon-arrow-bottom" disabled></button>
 									<ul class="pagination__list">
