--- a/src/home.html
+++ b/src/home.html
@@ -290,7 +290,7 @@
 							<h4 class="product-block__title">
 								<a href="" class="product-block__link-title">Тактические фонари</a>
 							</h4>
-							<div class="product-block__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+							<div class="product-block__text">Фонари с большим световым потоком, надежной конструкцией и возможностью регулирования яркости.</div>
 							<a href="" class="product-block__button button">Подробнее</a>
 						</div>
 						<div class="product-block__image">
@@ -300,9 +300,9 @@
 					<div class="products-block__item product-block">
 						<div class="product-block__body">
 							<h4 class="product-block__title">
-								<a href="" class="product-block__link-title">Палобные мультифонари</a>
+								<a href="" class="product-block__link-title">Налобные фонари</a>
 							</h4>
-							<div class="product-block__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+							<div class="product-block__text">Фонари, которые носятся на голове, обеспечивая свет там, где руки нужны свободными. Полезны в спорте, туризме и других активных занятиях.</div>
 							<a href="" class="product-block__button button">Подробнее</a>
 						</div>
 						<div class="product-block__image">
