--- a/src/product.html
+++ b/src/product.html
@@ -23,6 +23,37 @@
 					</nav>
 				</div>
 			</div>
+			<div class="product">
+				<div class="product__container">
+					<div class="product__main">
+						<div class="product__images images-product">
+							<div class="images-product__slider swiper">
+								<div class="images-product__wrapper swiper-wrapper">
+									<div class="images-product__slide-ibg swiper-slide">
+										<img src="@img/phoduct/01.jpg" alt="Нож Снегирь">
+									</div>
+									<div class="images-product__slide-ibg swiper-slide">
+										<img src="@img/phoduct/02.jpg" alt="Нож Снегирь">
+									</div>
+								</div>
+							</div>
+							<div class="images-product__thumbs thumbs-images">
+								<div class="thumbs-images__slider swiper">
+									<div class="thumbs-images__wrapper swiper-wrapper">
+										<div class="thumbs-images__slide-ibg swiper-slide">
+											<img src="@img/phoduct/01.jpg" alt="">
+										</div>
+										<div class="thumbs-images__slide-ibg swiper-slide">
+											<img src="@img/phoduct/03.jpg" alt="">
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+				</div>
+			</div>
 		</main>
 		@@include('html/_footer.htm',{})
 	</div>
