--- a/src/product.html
+++ b/src/product.html
@@ -25,33 +25,174 @@
 			</div>
 			<div class="product">
 				<div class="product__container">
-					<div class="product__main">
-						<div class="product__images images-product">
-							<div class="images-product__slider swiper">
-								<div class="images-product__wrapper swiper-wrapper">
-									<div class="images-product__slide-ibg swiper-slide">
-										<img src="@img/phoduct/01.jpg" alt="Нож Снегирь">
+					<div class="product__main main-product">
+						<div class="main-product__images images-product">
+							<div class="images-product__slider">
+								<div class="images-product__swiper">
+									<div class="images-product__slide-ibg">
+										<img src="@img/phoduct/01.jpg" alt="">
 									</div>
-									<div class="images-product__slide-ibg swiper-slide">
-										<img src="@img/phoduct/02.jpg" alt="Нож Снегирь">
+									<div class="images-product__slide-ibg">
+										<img src="@img/phoduct/02.jpg" alt="">
+									</div>
+									<div class="images-product__slide-ibg">
+										<img src="@img/phoduct/03.jpg" alt="">
+									</div>
+									<div class="images-product__slide-ibg">
+										<img src="@img/phoduct/04.jpg" alt="">
+									</div>
+									<div class="images-product__slide-ibg">
+										<img src="@img/phoduct/05.jpg" alt="">
 									</div>
 								</div>
 							</div>
 							<div class="images-product__thumbs thumbs-images">
-								<div class="thumbs-images__slider swiper">
-									<div class="thumbs-images__wrapper swiper-wrapper">
-										<div class="thumbs-images__slide-ibg swiper-slide">
-											<img src="@img/phoduct/01.jpg" alt="">
+								<div class="thumbs-images__swiper">
+									<div class="thumbs-images__slide-ibg">
+										<img src="@img/phoduct/01.jpg" alt="">
+									</div>
+									<div class="thumbs-images__slide-ibg">
+										<img src="@img/phoduct/02.jpg" alt="">
+									</div>
+									<div class="thumbs-images__slide-ibg">
+										<img src="@img/phoduct/03.jpg" alt="">
+									</div>
+									<div class="thumbs-images__slide-ibg">
+										<img src="@img/phoduct/04.jpg" alt="">
+									</div>
+									<div class="thumbs-images__slide-ibg">
+										<img src="@img/phoduct/05.jpg" alt="">
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="main-product__body body-product">
+							<div class="body-product__header header-product">
+								<div class="header-product__line">
+									<h1 class="header-product__title">Нож Снегирь</h1>
+									<a href="" class="header-product__link _icon-compare"></a>
+									<a href="" class="header-product__link _icon-favorit"></a>
+								</div>
+								<div class="header-product__rating rating">
+									<div class="rating__body">
+										<div class="rating__active"></div>
+										<div class="rating__items">
+											<input type="radio" class="rating__item" value="1" name="rating">
+											<input type="radio" class="rating__item" value="2" name="rating">
+											<input type="radio" class="rating__item" value="3" name="rating">
+											<input type="radio" class="rating__item" value="4" name="rating">
+											<input type="radio" class="rating__item" value="5" name="rating">
 										</div>
-										<div class="thumbs-images__slide-ibg swiper-slide">
-											<img src="@img/phoduct/03.jpg" alt="">
+									</div>
+									<div class="rating__value">3.2</div>
+								</div>
+							</div>
+							<div class="body-product__table table-product">
+								<div class="table-product__label">Артикул:</div>
+								<div class="table-product__value">AF0000001952</div>
+								<div class="table-product__label">Торговая марка:</div>
+								<div class="table-product__value">WUESTHOF (Германия)</div>
+								<div class="table-product__label">Серия:</div>
+								<div class="table-product__value">Ножи серии Classic Ikon</div>
+								<div class="table-product__label">Бонусные баллы: </div>
+								<div class="table-product__value">38</div>
+							</div>
+							<div class="body-product__options options-product">
+								<div class="options-product__label">Сталь</div>
+								<div class="options-product__value">
+									<select name="form[]" data-class-modif="product">
+										<option value="1" selected>Выбрать сталь</option>
+										<option value="2">вариант №1</option>
+										<option value="3">Дамаск</option>
+										<option value="4">Порошковая</option>
+									</select>
+								</div>
+								<div class="options-product__label">Рукоять</div>
+								<div class="options-product__value">
+									<select name="form[]" data-class-modif="product">
+										<option value="1" selected>Выбрать рукоять</option>
+										<option value="2">осина</option>
+										<option value="3">дуб</option>
+										<option value="4">алюминий</option>
+									</select>
+								</div>
+								<div class="options-product__label">Обработка клинка</div>
+								<div class="options-product__value">
+									<select name="form[]" data-class-modif="product">
+										<option value="1" selected>Пункт №1</option>
+										<option value="2">Пункт №2</option>
+										<option value="3">Пункт №3</option>
+										<option value="4">Пункт №4</option>
+									</select>
+								</div>
+							</div>
+							<div class="body-product__actions actions-product">
+								<div class="actions-product__price">3 865</div>
+								<div class="actions-product__row">
+									<div class="actions-product__quantity quantity">
+										<button type="button" class="quantity__button quantity__button_minus"></button>
+										<div class="quantity__input">
+											<input autocomplete="off" type="text" name="form[]" value="1">
 										</div>
+										<button type="button" class="quantity__button quantity__button_plus"></button>
+									</div>
+									<div class="actions-product__buttons">
+										<a href="" class="actions-product__cart button"><span class="_icon-basket">В корзину</span></a>
+										<a href="" class="actions-product__button button button_black">Купить в 1 клик</a>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
+					<div data-tabs="992" class="product__info product-info">
+						<nav data-tabs-titles class="product-info__navigation">
+							<button type="button" class="product-info__title _tab-active">Описание</button>
+							<button type="button" class="product-info__title">Характеристики</button>
+							<button type="button" class="product-info__title">Отзывы</button>
+							<button type="button" class="product-info__title">Доставка</button>
+						</nav>
+						<div data-tabs-body class="product-info__content">
+							<div class="product-info__body">
+								<p>
+									Легкий удобный нож с клинком, имеющим пологие вогнутые линзовидные спуски на две трети ширины клинка, образующие тонкое,
+									прекрасно режущее лезвие толщиной около 0,6 мм в районе подводов.
+								</p>
+								<p> Обух клинка со спинкой рукояти имеет одну плавную дугообразную линию. На пяте перед рукоятью есть подпальцевый вырез для точных работ.</p>
+								<p>
+									Необходимо проявлять некоторую осторожность при работе с большими боковыми нагрузками на лезвие ножа, ввиду небольшой толщины клинка
+									в рабочей части.
+								</p>
 
+								<p>
+									Монтаж рукояти накладной плашечный. На навершии рукояти, функцию которого выполняет выступающий из под плашек хвостовик,
+									имеется отверстие под темляк. Этот нож удобный помощник при работе с продуктами и охоте на боровую и водоплавающую дичь.
+								</p>
+							</div>
+							<div class="product-info__body">
+								<p> Это специализированный инструмент, который используется для различных задач в лесу, на охоте, а также в других условиях, требующих надежного и прочного ножа.</p>
+								<h4>Основные характеристики охотничьего ножа:</h4>
+								<ul>
+									<li>Прочная и стабильная конструкция: обычно используется высококачественная сталь, которая обеспечивает высокую износостойкость и долговечность ножа.</li>
+									<li>Острый и долговечный клинок: обычно имеет одностороннюю заточку, которая позволяет легко и эффективно обрабатывать мясо, разделять кости и делать другие задачи.</li>
+									<li>Комфортная и прочная рукоятка: обычно используется древесина, кожа или пластик, который обеспечивает удобство использования и долговечность.</li>
+								</ul>
+							</div>
+							<div class="product-info__body">
+								<div class="product-info__wrapper">
+									<p>У данного товара нет отзывов. Станьте первым, кто оставил отзыв об этом товаре!</p>
+									<a href="#" class="button button_black">Написать отзыв</a>
+								</div>
+							</div>
+							<div class="product-info__body">
+								<select name="form[]" data-class-modif="product">
+									<option value="1" selected>Город</option>
+									<option value="2">Пункт №2</option>
+									<option value="3">Пункт №3</option>
+									<option value="4">Пункт №4</option>
+								</select>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</main>
