--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,9 @@
 		</div>
 		<div class="rootpage__contacts">
 			<h2>Мои контакты:</h2>
-			<p>Почта: <a href="mailto:email@gmail.com">email@gmail.com</a></p>
-			<p>Телефон: <a href="tel:8800800800">8 800 800 800</a></p>
-			<p>Соц. сеть: <a href="">ссылка на соц. сеть</a></p>
+			<p>Почта: <a href="mailto:samkrekotyn@gmail.com">samkrekotyn@gmail.com</a></p>
+			<p>Телефон: <a href="tel:89215841854">8 921 584 1854</a></p>
+			<p>Мой GitHub <a href="https://github.com/SemenKr">GitHub</a></p>
 		</div>
 	</div>
 </body>
